--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,8 +7,8 @@ services:
     ports:
       - '27016:27017'
     environment:
-      MONGO_INITDB_ROOT_USERNAME: your_mongo_username
-      MONGO_INITDB_ROOT_PASSWORD: your_mongo_password
+      MONGO_INITDB_ROOT_USERNAME:
+      MONGO_INITDB_ROOT_PASSWORD:
     volumes:
       - mongodb_data:/data/db
     networks:
